Incorrect default locale for New Zealand

XMLWordPrintable

    • b118
    • generic
    • generic
    • Not verified

      Here is the snippet from the test/java/util/Locale/data/deflocale.win7 log file:

      ---
      OS Locale (lcid: 1409, name: en-NZ): English (New Zealand) - 1252
      default locale: ID: en_US, Name: English (United States)
      display locale: ID: en_US, Name: English (United States)
      format locale: ID: en_US, Name: English (United States)
      default charset: windows-1252
      ---

      The "format locale" should be "en_NZ" here.

            Assignee:
            Naoto Sato
            Reporter:
            Naoto Sato
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: