6989111: Incorrect default locale for New Zealand 6990452: Provide system properties for the user specified script 6992312: Currency becomes XXX if do not specify user.country.format

Reviewed-by: okutsu